--- a/arabic.html
+++ b/arabic.html
@@ -142,6 +142,8 @@
     <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
     <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
     <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="صورة توضيحية 1" />
+   <img src="images/9f49fdee-3029-4d04-ab97-7a00f5e177156.png" alt="موجات الضغط الكوني" />
+
     <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="صورة توضيحية 2" />
     <img src="images/9f49fdee-3029-4d04-ab97-7a00f5e17756-1.png" alt="صورة توضيحية 3" />
     <p style="margin-top:40px; font-weight:600; text-align:center;">
