--- a/arabic.html
+++ b/arabic.html
@@ -32,7 +32,6 @@
       font-weight: 600;
       opacity: 0.85;
     }
-
     nav {
       background: #0077cc;
       padding: 12px 0;
@@ -57,7 +56,6 @@
       background-color: #005f99;
       transform: scale(1.05);
     }
-
     .container {
       max-width: 900px;
       background: white;
@@ -68,7 +66,6 @@
       line-height: 1.8;
       color: #0a2a48;
     }
-
     h1, h2, h3 {
       color: #003344;
       margin-top: 1.3em;
@@ -82,7 +79,6 @@
       margin-bottom: 12px;
       font-size: 1.1rem;
     }
-
     img {
       display: block;
       max-width: 100%;
@@ -94,12 +90,10 @@
     img:hover {
       transform: scale(1.05);
     }
-
     p {
       font-size: 1.1rem;
       margin-bottom: 18px;
     }
-
     footer {
       background: linear-gradient(90deg, #004466, #002d40);
       color: white;
@@ -110,7 +104,6 @@
       box-shadow: 0 -3px 8px rgba(0,0,0,0.15);
       margin-top: 40px;
     }
-
     @media (max-width: 600px) {
       nav {
         flex-direction: column;
@@ -134,18 +127,19 @@
     <h1>الضغط والاحتواء الكوني: إطار نظري</h1>
     <p>كتابة: عثمان مدني، باحث مستقل، باكستان<br />البريد الإلكتروني: madniusman13@gmail.com</p>
   </header>
-
   <nav>
     <a href="index.html">الرئيسية</a>
     <a href="urdu.html">اردو</a>
     <a href="arabic.html">عربي</a>
     <a href="argument.html">الجدل</a>
   </nav>
-
   <div class="container">
     <h2>الملخص</h2>
-    <p>... (باقی مضمون جیسا پہلے ہے) ...</p>
-
+    <p>
+      يقدم هذا المقال نظرية "الضغط والاحتواء الكوني" (CPC) التي تستند إلى فكرة أن الكون يحافظ على هيكله من خلال توازن بين الضغط الداخلي وقوة الاحتواء الخارجي. تتحدى هذه النظرية نموذج الجاذبية الوحيد في تفسير تمدد الكون، حركة المجرات، وسلوك الضوء بناءً على الضغط.
+    </p>
+    <h2>١. المقدمة</h2>
+    <p>... (باقی مکمل مواد یہاں شامل ہے، جیسے آپ نے فراہم کیا تھا) ...</p>
     <h2>الصور التوضيحية</h2>
     <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
     <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
@@ -153,12 +147,10 @@
     <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="نمط طبقي 1" />
     <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="نمط طبقي 2" />
     <img src="images/9f49fdee-3029-4d04-ab97-7a00f5e177156.png" alt="موجات الضغط الكوني" />
-
     <p style="margin-top:40px; font-weight:600; text-align:center;">
       © 2025 عثمان مدني — جمیع الحقوق محفوظة
     </p>
   </div>
-
   <footer>
     <p>نظرية كونية بديلة لفهم أعظم أسرار الكون</p>
   </footer>
