--- a/arabic.html
+++ b/arabic.html
@@ -47,7 +47,7 @@
       font-weight: 700;
       padding: 10px 22px;
       border-radius: 25px;
-      background-color: rgba(255 255 255 / 0.15);
+      background-color: rgba(255, 255, 255, 0.15);
       transition: background-color 0.3s ease, transform 0.2s ease;
       font-size: 1.05rem;
       white-space: nowrap;
@@ -127,30 +127,94 @@
     <h1>الضغط والاحتواء الكوني: إطار نظري</h1>
     <p>كتابة: عثمان مدني، باحث مستقل، باكستان<br />البريد الإلكتروني: madniusman13@gmail.com</p>
   </header>
+
   <nav>
     <a href="index.html">الرئيسية</a>
     <a href="urdu.html">اردو</a>
     <a href="arabic.html">عربي</a>
-    <a href="argument.html">الجدل</a>
+    <a href="argument.html">الجدل العلمي</a>
   </nav>
+
   <div class="container">
     <h2>الملخص</h2>
-    <p>
-      يقدم هذا المقال نظرية "الضغط والاحتواء الكوني" (CPC) التي تستند إلى فكرة أن الكون يحافظ على هيكله من خلال توازن بين الضغط الداخلي وقوة الاحتواء الخارجي. تتحدى هذه النظرية نموذج الجاذبية الوحيد في تفسير تمدد الكون، حركة المجرات، وسلوك الضوء بناءً على الضغط.
-    </p>
+    <p>يقدم هذا المقال نظرية "الضغط والاحتواء الكوني" (CPC) التي تستند إلى فكرة أن الكون يحافظ على هيكله من خلال توازن بين الضغط الداخلي وقوة الاحتواء الخارجي. تتحدى هذه النظرية نموذج الجاذبية الوحيد في تفسير تمدد الكون، حركة المجرات، وسلوك الضوء بناءً على الضغط.</p>
+
     <h2>١. المقدمة</h2>
-    <p>... (باقی مکمل مواد یہاں شامل ہے، جیسے آپ نے فراہم کیا تھا) ...</p>
-    <h2>الصور التوضيحية</h2>
+    <p>في علم الكون الحديث، تُفسّر البنية والحركة الكونية عموماً بواسطة قوانين الجاذبية التي تخضع للنظرية النسبية العامة. ومع ذلك، فإن الحقائق المرصودة مثل التوسع المتسارع، أنماط دوران المجرات، واستقرار البنى الكونية الكبيرة، تستدعي نظريات بديلة. تقترح نظرية CPC أن الضغط الكوني، الذي يتوازن مع قوة الاحتواء الخارجي، يتحكم في استقرار الكون ويقدم زاوية نظر جديدة.</p>
+
+    <h2>٢. عشرة أدلة علمية تؤيد نظرية CPC</h2>
+    <ol>
+      <li>التوسع المستمر للكون</li>
+      <li>استقرار التوازن الكوني</li>
+      <li>استقرار الثقوب السوداء والنجوم النيوترونية</li>
+      <li>تماثل إشعاع الخلفية الكونية</li>
+      <li>عدم التوازن بين المادة والمضادة للمادة</li>
+      <li>ضغط الفراغ الكمومي</li>
+      <li>قصور نظريات الجاذبية</li>
+      <li>حدود الكون</li>
+      <li>التشبيه المعماري</li>
+      <li>أنظمة الضغط في الطبيعة</li>
+    </ol>
+
+    <h2>٣. انفجار الكون - نهاية نظرية</h2>
+    <p>إذا زاد الضغط الداخلي عن الحد الذي يستطيع الاحتواء الخارجي تحمله، قد ينفجر الكون، مما يؤدي إلى تدمير جميع المجرات والمادة.</p>
+
+    <h2>٤. التأثير الأول - رد فعل البحار</h2>
+    <p>بما أن الماء غير قابل للانضغاط، فإن المحيطات على الأرض ستكون أول من يشعر بشدة هذا الانفجار، وتأثيره سيكون هائلاً.</p>
+
+    <h2>٥. تعليق الأجسام في الفضاء</h2>
+    <p>وفقاً لنظرية CPC، الأجسام لا تبقى معلقة في الفضاء فقط بسبب الجاذبية، بل بسبب توازن قوى الضغط.</p>
+
+    <h2>٦. تأثير الضغط على الضوء</h2>
+    <p>سرعة واتجاه الضوء قد تتأثر بالضغط، مما يقدم تفسيرات جديدة لظواهر مثل الانزياح الأحمر والعدسات الجاذبية.</p>
+
+    <h2>٧. المعادلات النظرية</h2>
+    <p><strong>التوازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</p>
+    <p><strong>الضغط المداري:</strong> Pr(r) = P₀ / (1 + k r²)</p>
+    <p><strong>الانزياح الأحمر بسبب تدرج الضغط:</strong> Δλ ∝ ∇P · d</p>
+
+    <h2>٨. قصور النظريات الحالية</h2>
+    <ul>
+      <li>النسبية العامة: لا تشرح التوسع بدون طاقة مظلمة</li>
+      <li>الجاذبية النيوتونية: تفشل على النطاق الكوني وتتجاهل الضغط</li>
+      <li>نماذج الطاقة المظلمة: تعتمد على فرضيات غير مرئية</li>
+      <li>نظرية الأوتار: معقدة ولا تملك أدلة تجريبية</li>
+    </ul>
+
+    <h2>٩. مزايا نظرية CPC</h2>
+    <ul>
+      <li>تفسير التوسع دون الحاجة لطاقة مظلمة</li>
+      <li>خالية من التفردات</li>
+      <li>تشابه مع الطبيعة (الفقاعات، المحيطات، الدماغ...)</li>
+    </ul>
+
+    <h2>١٠. الخاتمة</h2>
+    <p>تقدم نظرية الضغط والاحتواء الكوني نموذجاً جديداً لفهم تركيب وحركة الكون يعتمد على الضغط، متفادياً أوجه القصور في نماذج الجاذبية التقليدية.</p>
+
+    <h2>١١. المراجع</h2>
+    <ul>
+      <li>Misner, Thorne & Wheeler. (1973). *Gravitation.*</li>
+      <li>Padmanabhan. (1993). *Structure Formation in the Universe.*</li>
+      <li>Peebles. (1993). *Principles of Physical Cosmology.*</li>
+      <li>Riess et al. (1998). *Supernovae & Accelerating Universe.*</li>
+      <li>Verlinde. (2017). *Emergent Gravity.*</li>
+      <li>Zee. (2010). *Quantum Field Theory in a Nutshell.*</li>
+      <li>Weinberg. (1972). *Gravitation and Cosmology.*</li>
+    </ul>
+
+    <h2>١٢. الصور التوضيحية</h2>
     <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
     <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
     <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
-    <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="نمط طبقي 1" />
-    <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="نمط طبقي 2" />
-    <img src="images/9f49fdee-3029-4d04-ab97-7a00f5e177156.png" alt="موجات الضغط الكوني" />
+    <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="صورة مضافة 1" />
+    <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="صورة مضافة 2" />
+    <img src="images/9f49fdee-3029-4d04-ab97-7a00f5e177156.png" alt="صورة مضافة 3" />
+
     <p style="margin-top:40px; font-weight:600; text-align:center;">
-      © 2025 عثمان مدني — جمیع الحقوق محفوظة
+      © 2025 عثمان مدني — جميع الحقوق محفوظة
     </p>
   </div>
+
   <footer>
     <p>نظرية كونية بديلة لفهم أعظم أسرار الكون</p>
   </footer>
