--- a/arabic.html
+++ b/arabic.html
@@ -32,6 +32,7 @@
       font-weight: 600;
       opacity: 0.85;
     }
+
     nav {
       background: #0077cc;
       padding: 12px 0;
@@ -47,7 +48,7 @@
       font-weight: 700;
       padding: 10px 22px;
       border-radius: 25px;
-      background-color: rgba(255, 255, 255, 0.15);
+      background-color: rgba(255 255 255 / 0.15);
       transition: background-color 0.3s ease, transform 0.2s ease;
       font-size: 1.05rem;
       white-space: nowrap;
@@ -56,6 +57,7 @@
       background-color: #005f99;
       transform: scale(1.05);
     }
+
     .container {
       max-width: 900px;
       background: white;
@@ -66,6 +68,7 @@
       line-height: 1.8;
       color: #0a2a48;
     }
+
     h1, h2, h3 {
       color: #003344;
       margin-top: 1.3em;
@@ -79,6 +82,7 @@
       margin-bottom: 12px;
       font-size: 1.1rem;
     }
+
     img {
       display: block;
       max-width: 100%;
@@ -90,10 +94,12 @@
     img:hover {
       transform: scale(1.05);
     }
+
     p {
       font-size: 1.1rem;
       margin-bottom: 18px;
     }
+
     footer {
       background: linear-gradient(90deg, #004466, #002d40);
       color: white;
@@ -104,6 +110,8 @@
       box-shadow: 0 -3px 8px rgba(0,0,0,0.15);
       margin-top: 40px;
     }
+
+    /* Responsive */
     @media (max-width: 600px) {
       nav {
         flex-direction: column;
@@ -132,7 +140,7 @@
     <a href="index.html">الرئيسية</a>
     <a href="urdu.html">اردو</a>
     <a href="arabic.html">عربي</a>
-    <a href="argument.html">الجدل العلمي</a>
+    <a href="argument.html">الجدل</a>
   </nav>
 
   <div class="container">
@@ -200,13 +208,10 @@
       <li>تشابه مع أمثلة حقيقية من الطبيعة.</li>
     </ul>
 
-    <h2>١٠. الصور التوضيحية</h2>
-    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
-    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
-    <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
-    <img src="images/cosmic-balance.jpg" alt="توازن كوني" />
-    <img src="images/quantum-vacuum.jpg" alt="ضغط الفراغ الكمومي" />
-    <img src="images/universe-structure.jpg" alt="هيكل الكون" />
+    <h2>١٠. الخاتمة</h2>
+    <p>
+      تقدم نظرية الضغط والاحتواء الكوني نموذجاً جديداً لفهم تركيب وحركة الكون يعتمد على الضغط، متفادياً أوجه القصور في نماذج الجاذبية التقليدية.
+    </p>
 
     <h2>١١. المراجع</h2>
     <ul>
@@ -218,6 +223,14 @@
       <li>Zee, A. (2010). Quantum Field Theory in a Nutshell. Princeton University Press.</li>
       <li>Weinberg, S. (1972). Gravitation and Cosmology. Wiley.</li>
     </ul>
+
+    <h2>الصور التوضيحية</h2>
+    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
+    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
+    <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
+    <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="صورة إضافية 1" />
+    <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="صورة إضافية 2" />
+    <img src="images/9f49fdee-3029-4d04-ab97-7a00f5e17756.png" alt="صورة إضافية 3" />
 
     <p style="margin-top:40px; font-weight:600; text-align:center;">
       © 2025 عثمان مدني — جمیع الحقوق محفوظة
