--- a/arabic.html
+++ b/arabic.html
@@ -21,43 +21,27 @@
       text-align: center;
       box-shadow: 0 3px 6px rgba(0,0,0,0.15);
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.8rem;
-      letter-spacing: 2px;
-    }
-    header p {
-      margin-top: 8px;
-      font-size: 1.1rem;
-      font-weight: 600;
-      opacity: 0.85;
-    }
-
     nav {
       background: #0077cc;
       padding: 12px 0;
       display: flex;
       justify-content: center;
       gap: 25px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       flex-wrap: wrap;
     }
     nav a {
       color: white;
       text-decoration: none;
-      font-weight: 700;
+      font-weight: bold;
       padding: 10px 22px;
       border-radius: 25px;
-      background-color: rgba(255 255 255 / 0.15);
-      transition: background-color 0.3s ease, transform 0.2s ease;
-      font-size: 1.05rem;
-      white-space: nowrap;
+      background-color: rgba(255,255,255,0.15);
+      transition: 0.3s ease;
     }
     nav a:hover {
       background-color: #005f99;
       transform: scale(1.05);
     }
-
     .container {
       max-width: 900px;
       background: white;
@@ -66,40 +50,17 @@
       border-radius: 12px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.12);
       line-height: 1.8;
-      color: #0a2a48;
     }
-
     h1, h2, h3 {
       color: #003344;
-      margin-top: 1.3em;
-      margin-bottom: 0.6em;
     }
-    ol, ul {
-      padding-inline-start: 20px;
-      margin-top: 0;
-    }
-    ol li, ul li {
-      margin-bottom: 12px;
-      font-size: 1.1rem;
-    }
-
     img {
       display: block;
       max-width: 100%;
       margin: 25px auto;
-      border-radius: 15px;
+      border-radius: 12px;
       box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease;
     }
-    img:hover {
-      transform: scale(1.05);
-    }
-
-    p {
-      font-size: 1.1rem;
-      margin-bottom: 18px;
-    }
-
     footer {
       background: linear-gradient(90deg, #004466, #002d40);
       color: white;
@@ -107,138 +68,114 @@
       padding: 18px 15px;
       font-weight: 600;
       letter-spacing: 0.03em;
-      box-shadow: 0 -3px 8px rgba(0,0,0,0.15);
       margin-top: 40px;
     }
-
-    /* Responsive */
-    @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-        gap: 15px;
-        padding: 15px 0;
-      }
-      nav a {
-        padding: 12px 18px;
-        font-size: 1.2rem;
-        border-radius: 35px;
-      }
-      .container {
-        margin: 20px 15px 50px 15px;
-        padding: 25px 15px;
-      }
+    p, li {
+      font-size: 1.1rem;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>الضغط والاحتواء الكوني: إطار نظري</h1>
-    <p>كتابة: عثمان مدني، باحث مستقل، باكستان<br />البريد الإلكتروني: madniusman13@gmail.com</p>
+    <p>كتابة: عثمان مدني، باحث مستقل، باكستان | البريد: madniusman13@gmail.com</p>
   </header>
 
   <nav>
     <a href="index.html">الرئيسية</a>
     <a href="urdu.html">اردو</a>
     <a href="arabic.html">عربي</a>
-    <a href="argument.html">الجدل</a>
+    <a href="argument.html">الجدل العلمي</a>
+    <a href="urdu-argument.html">دلائل</a>
   </nav>
 
   <div class="container">
     <h2>الملخص</h2>
     <p>
-      يقدم هذا المقال نظرية "الضغط والاحتواء الكوني" (CPC) التي تستند إلى فكرة أن الكون يحافظ على هيكله من خلال توازن بين الضغط الداخلي وقوة الاحتواء الخارجي. تتحدى هذه النظرية نموذج الجاذبية الوحيد في تفسير تمدد الكون، حركة المجرات، وسلوك الضوء بناءً على الضغط.
+      يقدم هذا المقال نظرية "الضغط والاحتواء الكوني" (CPC) التي تفترض أن الكون يحافظ على توازنه من خلال ضغط داخلي مقابل احتواء خارجي. هذا النموذج يتحدى الاعتماد الحصري على الجاذبية ويفسر التوسع الكوني واستقراره عبر آليات الضغط.
     </p>
 
     <h2>١. المقدمة</h2>
     <p>
-      في علم الكون الحديث، تُفسّر البنية والحركة الكونية عموماً بواسطة قوانين الجاذبية التي تخضع للنظرية النسبية العامة. ومع ذلك، فإن الحقائق المرصودة مثل التوسع المتسارع، أنماط دوران المجرات، واستقرار البنى الكونية الكبيرة، تستدعي نظريات بديلة. تقترح نظرية CPC أن الضغط الكوني، الذي يتوازن مع قوة الاحتواء الخارجي، يتحكم في استقرار الكون ويقدم زاوية نظر جديدة.
+      تعتمد الكوزمولوجيا الحديثة على الجاذبية لشرح بنية الكون، لكن ظواهر مثل التوسع المتسارع واستقرار البنى تدعو لنموذج بديل. CPC يقترح أن الضغط هو القوة المسيطرة المتوازنة مع الاحتواء.
     </p>
 
     <h2>٢. عشرة أدلة علمية تؤيد نظرية CPC</h2>
     <ol>
-      <li>التوسع المستمر للكون: لو كانت الجاذبية فقط، لكانت الأجسام تتقارب، لكننا نرى المجرات تتباعد، مما يشير إلى وجود ضغط داخلي.</li>
-      <li>استقرار التوازن الكوني: لو كانت الجاذبية وحدها الفاعلة، لانهيار الكون، لكننا نلاحظ توازناً منظماً.</li>
-      <li>استقرار الثقوب السوداء والنجوم النيوترونية: على الرغم من قوة الجاذبية الكبيرة، فإنها محصورة ضمن نطاقات محددة.</li>
-      <li>تماثل إشعاع الخلفية الكونية: يشير إلى وجود ضغط موحد في جميع أنحاء الكون.</li>
-      <li>عدم التوازن بين المادة والمضادة للمادة: قد يكون بسبب تدخلات فيزيائية للاحتواء.</li>
-      <li>ضغط الفراغ الكمومي: كما يظهر في تأثير كازيمير، توجد طاقة ضغط حتى في الفراغ.</li>
-      <li>قصور نظريات الجاذبية: عدم توحيدها مع ميكانيكا الكم يفتح الباب لنظرية تعتمد الضغط.</li>
-      <li>حدود الكون: فرضية الاحتواء تشير إلى حدود طاقة غير متناهية.</li>
-      <li>التشبيه المعماري: يشبه الكون فقاعة غاز محاطة بجدار يوازن الضغط الداخلي.</li>
-      <li>أنظمة الضغط في الطبيعة: من الدماغ إلى المحيطات، التوازن يعتمد على الضغط.</li>
+      <li><strong>توسع الكون:</strong> يدل على وجود ضغط داخلي بدلاً من الجاذبية فقط.</li>
+      <li><strong>استقرار الكونية:</strong> وجود توازن مستمر يشير إلى آلية احتواء.</li>
+      <li><strong>الثقوب السوداء:</strong> وجود حد أقصى يدل على مقاومة ضغطية للتمدد المطلق.</li>
+      <li><strong>إشعاع الخلفية الكونية:</strong> تماثله يدل على ضغط موحد.</li>
+      <li><strong>اختلال المادة/المادة المضادة:</strong> قد يعكس تدخلًا احتوائيًا.</li>
+      <li><strong>ضغط الفراغ الكمومي:</strong> يؤكده تأثير كازيمير.</li>
+      <li><strong>قصور الجاذبية:</strong> فشل التوحيد مع ميكانيكا الكم.</li>
+      <li><strong>حدود الكون:</strong> تتطلب احتواءً يفرض التوازن.</li>
+      <li><strong>التشبيه المعماري:</strong> يشبه الكون فقاعة مضغوطة.</li>
+      <li><strong>أنظمة الضغط في الطبيعة:</strong> كالدماغ والبحار.</li>
     </ol>
 
-    <h2>٣. انفجار الكون - نهاية نظرية</h2>
-    <p>
-      إذا زاد الضغط الداخلي عن الحد الذي يستطيع الاحتواء الخارجي تحمله، قد ينفجر الكون، مما يؤدي إلى تدمير جميع المجرات والمادة.
-    </p>
+    <h2>٣. انفجار كوني محتمل</h2>
+    <p>إذا زاد الضغط الداخلي عن قدرة الاحتواء، قد يحدث انفجار كوني شامل.</p>
 
-    <h2>٤. التأثير الأول - رد فعل البحار</h2>
-    <p>
-      بما أن الماء غير قابل للانضغاط، فإن المحيطات على الأرض ستكون أول من يشعر بشدة هذا الانفجار، وتأثيره سيكون هائلاً.
-    </p>
+    <h2>٤. أول تأثير: المحيطات</h2>
+    <p>المياه غير قابلة للانضغاط، لذا ستكون أول من يتأثر بهذا التغيير الكوني العنيف.</p>
 
-    <h2>٥. تعليق الأجسام في الفضاء - على أساس الضغط</h2>
-    <p>
-      وفقاً لنظرية CPC، الأجسام لا تبقى معلقة في الفضاء فقط بسبب الجاذبية، بل بسبب توازن قوى الضغط.
-    </p>
+    <h2>٥. الأجسام المعلقة في الفضاء</h2>
+    <p>لا تبقى معلقة بسبب الجاذبية فقط، بل بتوازن الضغط والاحتواء.</p>
 
     <h2>٦. تأثير الضغط على الضوء</h2>
-    <p>
-      سرعة واتجاه الضوء قد تتأثر بالضغط، مما يقدم تفسيرات جديدة لظواهر مثل الانزياح الأحمر والعدسات الجاذبية.
-    </p>
+    <p>يؤثر على سرعة الضوء ويقدم تفسيرًا بديلًا للانزياح الأحمر.</p>
 
     <h2>٧. المعادلات النظرية</h2>
-    <p><strong>التوازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</p>
-    <p><strong>الضغط المداري:</strong> Pr(r) = P₀ / (1 + k r²)</p>
-    <p><strong>الانزياح الأحمر بسبب تدرج الضغط:</strong> Δλ ∝ ∇P · d</p>
-
-    <h2>٨. قصور النظريات الرئيسية</h2>
     <ul>
-      <li>النسبية العامة: لا تشرح التوسع بدون طاقة مظلمة.</li>
-      <li>الجاذبية النيوتونية: تفشل على النطاق الكوني وتتجاهل الضغط.</li>
-      <li>نماذج الطاقة المظلمة: تعتمد على فرضيات غير مرئية.</li>
-      <li>نظرية الأوتار: معقدة ولا تملك أدلة تجريبية.</li>
+      <li>التوازن: Pi × A = Fc × A ⇒ Pi = Fc</li>
+      <li>الضغط المداري: Pr(r) = P₀ / (1 + k r²)</li>
+      <li>الانزياح الأحمر: Δλ ∝ ∇P · d</li>
     </ul>
 
-    <h2>٩. مزايا نظرية CPC</h2>
+    <h2>٨. قصور النماذج التقليدية</h2>
     <ul>
-      <li>تفسير التوسع بدون الحاجة للطاقة المظلمة.</li>
-      <li>خالية من التفردات (singularities).</li>
-      <li>تشابه مع أمثلة حقيقية من الطبيعة.</li>
+      <li>النسبية العامة: تعتمد على طاقة مظلمة غير مؤكدة.</li>
+      <li>الجاذبية النيوتونية: تفشل على نطاق كوني.</li>
+      <li>الطاقة المظلمة: فرضية بدون تجربة.</li>
+      <li>نظرية الأوتار: معقدة وغير مثبتة.</li>
+    </ul>
+
+    <h2>٩. مزايا نموذج CPC</h2>
+    <ul>
+      <li>يفسر التوسع بدون طاقة مظلمة.</li>
+      <li>نموذج خالٍ من التفردات.</li>
+      <li>يعتمد على مفاهيم فيزيائية واقعية.</li>
     </ul>
 
     <h2>١٠. الخاتمة</h2>
-    <p>
-      تقدم نظرية الضغط والاحتواء الكوني نموذجاً جديداً لفهم تركيب وحركة الكون يعتمد على الضغط، متفادياً أوجه القصور في نماذج الجاذبية التقليدية.
-    </p>
+    <p>نظرية CPC تفتح بابًا لفهم جديد لبنية واستقرار الكون، وتقدم بديلاً علميًا قابلًا للبحث والتجريب.</p>
 
     <h2>١١. المراجع</h2>
     <ul>
-      <li>Misner, C. W., Thorne, K. S., & Wheeler, J. A. (1973). Gravitation. W. H. Freeman and Company.</li>
-      <li>Padmanabhan, T. (1993). Structure Formation in the Universe. Cambridge University Press.</li>
-      <li>Peebles, P. J. E. (1993). Principles of Physical Cosmology. Princeton University Press.</li>
-      <li>Riess, A. G., et al. (1998). Observational Evidence from Supernovae for an Accelerating Universe. The Astronomical Journal, 116(3), 1009–1038.</li>
-      <li>Verlinde, E. (2017). Emergent Gravity and the Dark Universe. SciPost Physics, 2(3), 016.</li>
-      <li>Zee, A. (2010). Quantum Field Theory in a Nutshell. Princeton University Press.</li>
-      <li>Weinberg, S. (1972). Gravitation and Cosmology. Wiley.</li>
+      <li>Misner, Thorne, Wheeler. Gravitation (1973).</li>
+      <li>Padmanabhan. Structure Formation in the Universe (1993).</li>
+      <li>Peebles. Physical Cosmology (1993).</li>
+      <li>Riess et al. Supernovae & Accelerating Universe (1998).</li>
+      <li>Verlinde. Emergent Gravity (2017).</li>
+      <li>Zee. QFT in a Nutshell (2010).</li>
+      <li>Weinberg. Gravitation and Cosmology (1972).</li>
     </ul>
 
-    <h2>الصور التوضيحية</h2>
+    <h2>١٢. الصور التوضيحية</h2>
     <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
     <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
     <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
     <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="صورة إضافية 1" />
     <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="صورة إضافية 2" />
-    <img src="images/9f49fdee-3029-4d04-ab97-7a00f5e17756.png" alt="صورة إضافية 3" />
 
-    <p style="margin-top:40px; font-weight:600; text-align:center;">
-      © 2025 عثمان مدني — جمیع الحقوق محفوظة
+    <p style="text-align:center; margin-top:40px; font-weight:bold;">
+      © 2025 عثمان مدني — جميع الحقوق محفوظة
     </p>
   </div>
 
   <footer>
-    <p>نظرية كونية بديلة لفهم أعظم أسرار الكون</p>
+    <p>نظرية بديلة لفهم أعظم أسرار الكون</p>
   </footer>
 </body>
 </html>
