--- a/arabic.html
+++ b/arabic.html
@@ -92,86 +92,93 @@
   <div class="container">
     <h2>الملخص</h2>
     <p>
-      يقدم هذا المقال نظرية "الضغط والاحتواء الكوني" (CPC) التي تفترض أن الكون يحافظ على توازنه من خلال ضغط داخلي مقابل احتواء خارجي. هذا النموذج يتحدى الاعتماد الحصري على الجاذبية ويفسر التوسع الكوني واستقراره عبر آليات الضغط.
+      يقدم هذا المقال نظرية "الضغط والاحتواء الكوني" (CPC) التي تستند إلى فكرة أن الكون يحافظ على هيكله من خلال توازن بين الضغط الداخلي وقوة الاحتواء الخارجي. تتحدى هذه النظرية نموذج الجاذبية الوحيد في تفسير تمدد الكون، حركة المجرات، وسلوك الضوء بناءً على الضغط.
     </p>
 
     <h2>١. المقدمة</h2>
     <p>
-      تعتمد الكوزمولوجيا الحديثة على الجاذبية لشرح بنية الكون، لكن ظواهر مثل التوسع المتسارع واستقرار البنى تدعو لنموذج بديل. CPC يقترح أن الضغط هو القوة المسيطرة المتوازنة مع الاحتواء.
+      في علم الكونيات الحديث، تُفسر البنية والحركة الكونية عمومًا وفقًا لقوانين الجاذبية كما وردت في النسبية العامة. ومع ذلك، فإن الملاحظات مثل التوسع المتسارع، أنماط دوران المجرات، واستقرار الهياكل الكونية الكبيرة تشير إلى الحاجة لنظريات بديلة. تقترح نظرية CPC أن الضغط الكوني المتوازن مع قوة احتواء خارجية هو ما يحكم استقرار الكون.
     </p>
 
-    <h2>٢. عشرة أدلة علمية تؤيد نظرية CPC</h2>
+    <h2>٢. عشرة أدلة علمية تؤيد النظرية</h2>
     <ol>
-      <li><strong>توسع الكون:</strong> يدل على وجود ضغط داخلي بدلاً من الجاذبية فقط.</li>
-      <li><strong>استقرار الكونية:</strong> وجود توازن مستمر يشير إلى آلية احتواء.</li>
-      <li><strong>الثقوب السوداء:</strong> وجود حد أقصى يدل على مقاومة ضغطية للتمدد المطلق.</li>
-      <li><strong>إشعاع الخلفية الكونية:</strong> تماثله يدل على ضغط موحد.</li>
-      <li><strong>اختلال المادة/المادة المضادة:</strong> قد يعكس تدخلًا احتوائيًا.</li>
-      <li><strong>ضغط الفراغ الكمومي:</strong> يؤكده تأثير كازيمير.</li>
-      <li><strong>قصور الجاذبية:</strong> فشل التوحيد مع ميكانيكا الكم.</li>
-      <li><strong>حدود الكون:</strong> تتطلب احتواءً يفرض التوازن.</li>
-      <li><strong>التشبيه المعماري:</strong> يشبه الكون فقاعة مضغوطة.</li>
-      <li><strong>أنظمة الضغط في الطبيعة:</strong> كالدماغ والبحار.</li>
+      <li>استمرار التوسع الكوني: تشير حركة المجرات المتباعدة إلى وجود ضغط داخلي يدفعها، بدلاً من جذب الجاذبية فقط.</li>
+      <li>توازن الكون: بقاء الكون في حالة توازن يدل على وجود قوة احتواء منظمة، وإلا لتهاوى الكون بفعل الجاذبية فقط.</li>
+      <li>الثقوب السوداء والنجوم النيوترونية: مع أنها تتمتع بجاذبية قوية، إلا أن لها حدود تشير إلى وجود احتواء يكبح تمددها.</li>
+      <li>تماثل إشعاع الخلفية الكونية (CMBR): يشير إلى توزيع ضغط متساوٍ عبر الكون.</li>
+      <li>عدم توازن المادة والمادة المضادة: قد يكون ناتجًا عن تدخل فيزيائي للاحتواء في المراحل المبكرة من الكون.</li>
+      <li>ضغط الفراغ الكمومي: كما يُلاحظ في تأثير كازيمير، حتى الفراغ يحتوي على طاقة ضغط كامنة.</li>
+      <li>قصور نظريات الجاذبية: فشلها في التوحيد مع ميكانيكا الكم يفتح المجال لنظريات بديلة مثل CPC.</li>
+      <li>وجود حدود للكون: فكرة الاحتواء تفترض وجود حدود تضبط طاقة الكون ضمن نظام متوازن.</li>
+      <li>التشبيه المعماري: يشبه الكون فقاعة غاز محاطة بجدار يحفظ التوازن بين الداخل والخارج.</li>
+      <li>أنظمة الضغط في الطبيعة: مثل ضغط الدم والهواء والماء، مما يوضح أن الضغط مبدأ كوني طبيعي للتوازن.</li>
     </ol>
 
-    <h2>٣. انفجار كوني محتمل</h2>
-    <p>إذا زاد الضغط الداخلي عن قدرة الاحتواء، قد يحدث انفجار كوني شامل.</p>
+    <h2>٣. انفجار الكون - سيناريو نظري</h2>
+    <p>
+      إذا تجاوز الضغط الداخلي قدرة الاحتواء الخارجي، قد يؤدي ذلك إلى انفجار شامل يدمر البنية الكونية.
+    </p>
 
-    <h2>٤. أول تأثير: المحيطات</h2>
-    <p>المياه غير قابلة للانضغاط، لذا ستكون أول من يتأثر بهذا التغيير الكوني العنيف.</p>
+    <h2>٤. التأثير الأول - تفاعل المحيطات</h2>
+    <p>
+      الماء غير قابل للضغط، لذا فإن المحيطات ستكون أول من يتأثر بانفجار كوني محتمل.
+    </p>
 
-    <h2>٥. الأجسام المعلقة في الفضاء</h2>
-    <p>لا تبقى معلقة بسبب الجاذبية فقط، بل بتوازن الضغط والاحتواء.</p>
+    <h2>٥. توازن الأجسام في الفضاء</h2>
+    <p>
+      وفقًا لـ CPC، فإن الأجسام لا تبقى معلقة في الفضاء بسبب الجاذبية وحدها، بل بسبب توازن ضغط محيط بها.
+    </p>
 
     <h2>٦. تأثير الضغط على الضوء</h2>
-    <p>يؤثر على سرعة الضوء ويقدم تفسيرًا بديلًا للانزياح الأحمر.</p>
+    <p>
+      يمكن أن تؤثر تدرجات الضغط على سرعة الضوء واتجاهه، مما يقدم تفسيرًا بديلاً للانزياح الأحمر والعدسات الجاذبية.
+    </p>
 
     <h2>٧. المعادلات النظرية</h2>
+    <p><strong>معادلة التوازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</p>
+    <p><strong>ضغط مداري:</strong> Pr(r) = P₀ / (1 + k r²)</p>
+    <p><strong>الانزياح الأحمر بفعل الضغط:</strong> Δλ ∝ ∇P · d</p>
+
+    <h2>٨. قصور النظريات السائدة</h2>
     <ul>
-      <li>التوازن: Pi × A = Fc × A ⇒ Pi = Fc</li>
-      <li>الضغط المداري: Pr(r) = P₀ / (1 + k r²)</li>
-      <li>الانزياح الأحمر: Δλ ∝ ∇P · d</li>
+      <li>النسبية العامة: تعتمد على الطاقة المظلمة لتفسير التوسع.</li>
+      <li>الجاذبية النيوتونية: تفشل في تفسير الظواهر الكونية الكبرى.</li>
+      <li>نماذج الطاقة المظلمة: تقوم على فرضيات غير مرئية.</li>
+      <li>نظرية الأوتار: معقدة وتفتقر لأدلة تجريبية قوية.</li>
     </ul>
 
-    <h2>٨. قصور النماذج التقليدية</h2>
+    <h2>٩. مزايا نظرية CPC</h2>
     <ul>
-      <li>النسبية العامة: تعتمد على طاقة مظلمة غير مؤكدة.</li>
-      <li>الجاذبية النيوتونية: تفشل على نطاق كوني.</li>
-      <li>الطاقة المظلمة: فرضية بدون تجربة.</li>
-      <li>نظرية الأوتار: معقدة وغير مثبتة.</li>
-    </ul>
-
-    <h2>٩. مزايا نموذج CPC</h2>
-    <ul>
-      <li>يفسر التوسع بدون طاقة مظلمة.</li>
-      <li>نموذج خالٍ من التفردات.</li>
-      <li>يعتمد على مفاهيم فيزيائية واقعية.</li>
+      <li>تفسر التوسع الكوني بدون اللجوء إلى الطاقة المظلمة.</li>
+      <li>خالية من التفردات (singularities).</li>
+      <li>مبنية على تشبيهات حقيقية من الطبيعة.</li>
     </ul>
 
     <h2>١٠. الخاتمة</h2>
-    <p>نظرية CPC تفتح بابًا لفهم جديد لبنية واستقرار الكون، وتقدم بديلاً علميًا قابلًا للبحث والتجريب.</p>
+    <p>
+      توفر نظرية الضغط والاحتواء الكوني نموذجًا جديدًا لفهم الكون، يتجاوز أوجه القصور في نظريات الجاذبية التقليدية ويعتمد على مبدأ الضغط كمفهوم أساسي للتوازن.
+    </p>
 
     <h2>١١. المراجع</h2>
     <ul>
-      <li>Misner, Thorne, Wheeler. Gravitation (1973).</li>
-      <li>Padmanabhan. Structure Formation in the Universe (1993).</li>
-      <li>Peebles. Physical Cosmology (1993).</li>
-      <li>Riess et al. Supernovae & Accelerating Universe (1998).</li>
-      <li>Verlinde. Emergent Gravity (2017).</li>
-      <li>Zee. QFT in a Nutshell (2010).</li>
-      <li>Weinberg. Gravitation and Cosmology (1972).</li>
+      <li>Misner, Thorne, & Wheeler (1973) - Gravitation</li>
+      <li>Padmanabhan (1993) - Structure Formation in the Universe</li>
+      <li>Peebles (1993) - Principles of Physical Cosmology</li>
+      <li>Riess et al. (1998) - Supernova Evidence for Accelerating Universe</li>
+      <li>Verlinde (2017) - Emergent Gravity</li>
+      <li>Zee (2010) - Quantum Field Theory</li>
+      <li>Weinberg (1972) - Gravitation and Cosmology</li>
     </ul>
 
     <h2>١٢. الصور التوضيحية</h2>
-    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
-    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
-    <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
-    <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="صورة إضافية 1" />
-    <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="صورة إضافية 2" />
+    <img src="images/internal-pressure.png" alt="الضغط الداخلي" />
+    <img src="images/cpc-layers.png" alt="طبقات الاحتواء" />
+    <img src="images/cpc-diagrams.png" alt="مخططات CPC" />
+    <img src="images/cosmic-balance.jpg" alt="توازن كوني" />
+    <img src="images/quantum-vacuum.jpg" alt="فراغ كمومي" />
+    <img src="images/universe-structure.jpg" alt="هيكل الكون" />
 
-    <p style="text-align:center; margin-top:40px; font-weight:bold;">
-      © 2025 عثمان مدني — جميع الحقوق محفوظة
-    </p>
+    <p style="text-align:center; margin-top: 40px; font-weight: bold;">© 2025 عثمان مدني - جميع الحقوق محفوظة</p>
   </div>
 
   <footer>
