--- a/urdu-argument.html
+++ b/urdu-argument.html
@@ -53,6 +53,14 @@
   </main>
 </body>
   <body>
+    <!-- تصاویر کا سیکشن -->
+<h2>١١. الصور التوضيحية</h2>
+<img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
+<img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
+<img src="images/cpc-diagrams.png" alt="رسومات النظرية" />
+<img src="images/cosmic-balance.jpg" alt="توازن كوني" />
+<img src="images/quantum-vacuum.jpg" alt="ضغط الفراغ الكمومي" />
+
   <header>
     <nav>
       <a href="index.html">🏠 ہوم</a> |
