--- a/arabic.html
+++ b/arabic.html
@@ -203,12 +203,7 @@
     <h2>١٠. الخاتمة</h2>
     <p>يوفر نموذج الضغط والاحتواء الكوني رؤية جديدة لبنية الكون باستخدام مبادئ الضغط، وهو بديل واعد للنماذج التقليدية المبنية على الجاذبية فقط.</p>
 
-    <h2>١١. الصور التوضيحية</h2>
-    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
-    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
-    <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
-    <img src="images/cosmic-balance.jpg" alt="توازن كوني" />
-    <img src="images/quantum-vacuum.jpg" alt="ضغط الفراغ الكمومي" />
+    
 
     <h2>١٢. المراجع</h2>
     <ul>
@@ -230,4 +225,10 @@
     <p>نظرية كونية بديلة لفهم أعظم أسرار الكون</p>
   </footer>
 </body>
+  <h2>١٢. الصور التوضيحية</h2>
+    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
+    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
+    <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
+    <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="صورة إضافية 1" />
+    <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="صورة إضافية 2" />
 </html>
