--- a/urdu.html
+++ b/urdu.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>کائناتی دباؤ اور گھیراؤ</title>
+  body {
+  font-family: 'Noto Nastaliq Urdu', 'Jameel Noori Nastaleeq', serif;
+  font-size: 1.2rem;
+  line-height: 2;
+  background: linear-gradient(135deg, #f5faff, #ffffff);
+  color: #202020;
+  padding: 0;
+  margin: 0;
+}
+
   <style>
     body {
       font-family: 'Noto Naskh Arabic', serif;
