--- a/index.html
+++ b/index.html
@@ -162,4 +162,10 @@
     <p>© 2025 Usman Madni — All rights reserved</p>
   </footer>
 </body>
+  <h2>١٢. الصور التوضيحية</h2>
+    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
+    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
+    <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
+    <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="صورة إضافية 1" />
+    <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="صورة إضافية 2" />
 </html>
