--- a/urdu.html
+++ b/urdu.html
@@ -1,94 +1,75 @@
 <!DOCTYPE html>
 <html lang="ur" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>کائناتی دباؤ اور گھیراؤ - ایک نظریاتی خاکہ</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>کائناتی دباؤ اور گھیراؤ</title>
   <style>
     body {
-      font-family: 'Noto Nastaliq Urdu', 'Jameel Noori Nastaleeq', serif;
-      font-size: 1.2rem;
-      line-height: 2;
-      background: linear-gradient(135deg, #f5faff, #ffffff);
-      color: #202020;
+      font-family: 'Noto Naskh Arabic', serif;
+      background: linear-gradient(to bottom, #f3f3f3, #e6f0ff);
+      color: #222;
+      line-height: 1.8;
       margin: 0;
-      padding: 0;
+      padding: 0 1rem;
     }
     header {
-      background-color: #004466;
+      background-color: #004080;
       color: white;
-      padding: 30px 20px;
-      text-align: center;
-    }
-    nav {
-      background-color: #006699;
-      padding: 12px 0;
+      padding: 1rem;
       text-align: center;
     }
     nav a {
-      color: white;
-      margin: 0 12px;
+      color: #ffffff;
+      margin: 0 0.5rem;
       text-decoration: none;
       font-weight: bold;
-      padding: 8px 18px;
-      border-radius: 20px;
-      background-color: rgba(255,255,255,0.1);
     }
     nav a:hover {
-      background-color: #004466;
+      text-decoration: underline;
     }
-    .container {
+    main {
+      background-color: #ffffff;
+      padding: 2rem;
+      margin: 1rem auto;
       max-width: 900px;
-      margin: auto;
-      background: #fff;
-      padding: 30px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      border-radius: 8px;
     }
-    h1, h2, h3 {
-      color: #003344;
-      margin-top: 1.3em;
-    }
-    p {
-      margin-bottom: 15px;
-    }
-    ol, ul {
-      padding-right: 20px;
-    }
-    li {
-      margin-bottom: 12px;
-    }
-    img {
-      display: block;
-      max-width: 90%;
-      margin: 20px auto;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    h1, h2 {
+      color: #003366;
     }
     footer {
-      background-color: #004466;
-      color: white;
       text-align: center;
-      padding: 15px;
-      margin-top: 40px;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+    ol, ul {
+      padding-right: 1.5rem;
+    }
+    li {
+      margin-bottom: 0.7rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>کائناتی دباؤ اور گھیراؤ</h1>
-    <p>تحریر: عثمان مدنی، آزاد محقق، پاکستان<br>ای میل: madniusman13@gmail.com</p>
+    <nav>
+      <a href="index.html">🏠 ہوم</a> |
+      <a href="urdu.html">اردو</a> |
+      <a href="arabic.html">عربی</a> |
+      <a href="argument.html">Scientific Argument</a> |
+      <a href="urdu-argument.html">دلائل</a> |
+      <a href="about.html">تعارف</a>
+    </nav>
   </header>
 
-  <nav>
-    <a href="index.html">ہوم</a>
-    <a href="urdu.html">اردو</a>
-    <a href="arabic.html">عربی</a>
-    <a href="argument.html">Scientific Argument</a>
-    <a href="urdu-argument.html">دلائل</a>
-    <a href="about.html">تعارف</a>
-  </nav>
+  <main>
+    <h1>کائناتی دباؤ اور گھیراؤ: ایک نظریاتی خاکہ</h1>
+    <p><strong>تحریر:</strong> عثمان مدنی، آزاد محقق، پاکستان</p>
+    <p><strong>ای میل:</strong> madniusman13@gmail.com</p>
 
-  <div class="container">
     <h2>خلاصہ</h2>
     <p>
       یہ مقالہ 'کائناتی دباؤ اور گھیراؤ' (CPC) نظریے کو پیش کرتا ہے جو اس تصور پر مبنی ہے کہ کائنات اپنی ساخت کو اندرونی دباؤ اور بیرونی گھیراؤ کی قوت کے توازن سے قائم رکھتی ہے۔ یہ نظریہ کشش ثقل کے واحد ماڈل کو چیلنج کرتے ہوئے کائناتی توسیع، کہکشاؤں کی حرکات، اور روشنی کے رویے کو دباؤ کی بنیاد پر سمجھاتا ہے۔
@@ -101,37 +82,67 @@
 
     <h2>٢. CPC نظریہ کے حق میں دس سائنسی دلائل</h2>
     <ol>
-      <li>کائنات کا مسلسل پھیلاؤ: اگر صرف گریویٹی ہوتی، تو کائنات ایک دوسرے کی طرف کھنچتی، لیکن ہم دیکھتے ہیں کہ کہکشائیں دور جا رہی ہیں، جو کہ اندرونی دباؤ کی نشاندہی کرتا ہے۔</li>
-      <li>کائناتی توازن کا برقرار رہنا: اگر صرف گریویٹی کام کر رہی ہوتی تو تمام اجسام آپس میں ٹکرا کر منہدم ہو چکی ہوتیں، لیکن کائنات ایک متوازن نظام میں ہے۔</li>
-      <li>بلیک ہولز اور نیوٹرون اسٹارز کا استقرار: ان میں گریویٹی بے حد زیادہ ہے، مگر پھر بھی وہ محدود دائرہ کار میں موجود ہیں۔</li>
-      <li>کائناتی بیک گراؤنڈ ریڈی ایشن (CMBR) کی یکنواختی: پورے کائنات میں ایک جیسے سگنل ملنا اس دباؤ کے توازن کو ظاہر کرتا ہے۔</li>
-      <li>مادہ اور اینٹی مادہ کا عدم توازن: بیگ بینگ کے بعد یہ برابر ہونے چاہیے تھے، لیکن ایسا نہ ہونا دباؤ کی مداخلت کو ظاہر کرتا ہے۔</li>
-      <li>کوانٹم ویکیوم پریشر: خالی خلا بھی دباؤ رکھتا ہے جیسا کہ Casimir Effect سے ظاہر ہوتا ہے۔</li>
-      <li>گریویٹی کی خامیاں: گریویٹی کو ابھی تک کوانٹم لیول پر unify نہیں کیا جا سکا، یہ ظاہر کرتا ہے کہ ہو سکتا ہے ہم دباؤ کو غلطی سے گریویٹی سمجھ رہے ہوں۔</li>
-      <li>کائناتی سرحدیں: اگر کائنات محدود ہے تو اسے کسی بیرونی دباؤ یا تحفظ نے متوازن رکھا ہوگا۔</li>
-      <li>تعمیراتی مشابہت: کائنات بلبلے یا گنبد جیسی ساخت رکھتی ہے، جس میں اندرونی دباؤ بیرونی دیوار سے متوازن ہے۔</li>
-      <li>انسانی جسم میں دباؤ کے نظام: جیسے دماغی یا شریانی دباؤ، یہ قدرتی نظام بھی دباؤ سے منظم ہوتے ہیں، تو کائنات بھی ہو سکتی ہے۔</li>
+      <li><strong>کائنات کا مسلسل پھیلاؤ:</strong> اگر صرف گریویٹی ہوتی، تو کائنات ایک دوسرے کی طرف کھنچتی، لیکن ہم دیکھتے ہیں کہ کہکشائیں دور جا رہی ہیں، جو کہ اندرونی دباؤ کی نشاندہی کرتا ہے۔</li>
+      <li><strong>کائناتی توازن کا برقرار رہنا:</strong> اگر صرف گریویٹی کام کر رہی ہوتی تو تمام اجسام آپس میں ٹکرا کر منہدم ہو چکی ہوتیں، لیکن کائنات ایک متوازن نظام میں ہے۔</li>
+      <li><strong>بلیک ہولز اور نیوٹرون اسٹارز کا استقرار:</strong> ان میں گریویٹی بے حد زیادہ ہے، مگر پھر بھی وہ محدود دائرہ کار میں موجود ہیں۔</li>
+      <li><strong>کائناتی بیک گراؤنڈ ریڈی ایشن (CMBR) کی یکنواختی:</strong> پورے کائنات میں ایک جیسے سگنل ملنا اس دباؤ کے توازن کو ظاہر کرتا ہے۔</li>
+      <li><strong>مادہ اور اینٹی مادہ کا عدم توازن:</strong> بیگ بینگ کے بعد یہ برابر ہونے چاہیے تھے، لیکن ایسا نہ ہونا دباؤ کی مداخلت کو ظاہر کرتا ہے۔</li>
+      <li><strong>کوانٹم ویکیوم پریشر:</strong> خالی خلا بھی دباؤ رکھتا ہے جیسا کہ Casimir Effect سے ظاہر ہوتا ہے۔</li>
+      <li><strong>گریویٹی کی خامیاں:</strong> گریویٹی کو ابھی تک کوانٹم لیول پر unify نہیں کیا جا سکا، یہ ظاہر کرتا ہے کہ ہو سکتا ہے ہم دباؤ کو غلطی سے گریویٹی سمجھ رہے ہوں۔</li>
+      <li><strong>کائناتی سرحدیں:</strong> اگر کائنات محدود ہے تو اسے کسی بیرونی دباؤ یا تحفظ نے متوازن رکھا ہوگا۔</li>
+      <li><strong>تعمیراتی مشابہت:</strong> کائنات بلبلے یا گنبد جیسی ساخت رکھتی ہے، جس میں اندرونی دباؤ بیرونی دیوار سے متوازن ہے۔</li>
+      <li><strong>انسانی جسم میں دباؤ کے نظام:</strong> جیسے دماغی یا شریانی دباؤ، یہ قدرتی نظام بھی دباؤ سے منظم ہوتے ہیں، تو کائنات بھی ہو سکتی ہے۔</li>
     </ol>
 
-    <h2>٣. تصاویر</h2>
-    <img src="images/internal-pressure.png" alt="الضغط الداخلي" />
-    <img src="images/cpc-layers.png" alt="طبقات الاحتواء" />
-    <img src="images/cpc-diagrams.png" alt="رسومات الضغط" />
-    <img src="images/cosmic-balance.jpg" alt="توازن كوني" />
-    <img src="images/universe-structure.jpg" alt="هيكل الكون" />
+    <h2>٣. کائناتی پھٹاؤ — ایک نظریاتی انجام</h2>
+    <p>
+      اگر اندرونی دباؤ حد سے بڑھ جائے اور بیرونی گھیراؤ اسے سنبھال نہ سکے، تو کائنات پھٹ سکتی ہے، جس سے تمام کہکشائیں اور مادہ تباہ ہو جائے گا۔
+    </p>
 
-    <h2>٤. نظریاتی مساوات</h2>
-    <p><strong>توازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</p>
-    <p><strong>مداری دباؤ:</strong> Pr(r) = P₀ / (1 + k r²)</p>
-    <p><strong>ریڈ شفٹ:</strong> Δλ ∝ ∇P · d</p>
+    <h2>٤. پہلا اثر — سمندروں کا ردعمل</h2>
+    <p>
+      پانی غیر سکڑنے والا ہے، اس لیے زمین کے سمندر سب سے پہلے اس دھماکے کا اثر محسوس کریں گے، اور اس کی شدت ناقابلِ برداشت ہوگی۔
+    </p>
 
-    <h2>٥. نتیجہ</h2>
+    <h2>٥. اجسام کا خلا میں معلق ہونا — دباؤ کی بنیاد پر</h2>
+    <p>
+      CPC کے مطابق، خلا میں اجسام صرف گریویٹی کی وجہ سے نہیں بلکہ دباؤ کے توازن سے معلق رہتے ہیں۔
+    </p>
+
+    <h2>٦. روشنی پر دباؤ کا اثر</h2>
+    <p>
+      روشنی کی رفتار اور سمت دباؤ کے تابع ہو سکتی ہے۔ یہ ریڈ شفٹ اور لینزنگ جیسے مظاہر کی نئی وضاحت پیش کرتا ہے۔
+    </p>
+
+    <h2>٧. نظریاتی مساوات</h2>
+    <ul>
+      <li><strong>توازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</li>
+      <li><strong>مداری دباؤ:</strong> Pr(r) = P₀ / (1 + k r²)</li>
+      <li><strong>ریڈ شفٹ:</strong> Δλ ∝ ∇P · d</li>
+    </ul>
+
+    <h2>٨. مرکزی نظریات کی خامیاں</h2>
+    <ul>
+      <li><strong>جنرل ریلیٹیویٹی:</strong> ڈارک انرجی کے بغیر توسیع کی وضاحت نہیں کر سکتی۔</li>
+      <li><strong>نیوٹونی گریویٹی:</strong> کائناتی پیمانے پر ناکام اور دباؤ کو نظر انداز کرتی ہے۔</li>
+      <li><strong>ڈارک انرجی ماڈلز:</strong> غیر مرئی قیاسات پر مبنی ہیں۔</li>
+      <li><strong>سٹرنگ تھیوری:</strong> پیچیدہ ہے اور عملی ثبوت نہیں رکھتی۔</li>
+    </ul>
+
+    <h2>٩. CPC نظریہ کی خوبیاں</h2>
+    <ul>
+      <li>ڈارک انرجی کے بغیر توسیع کی وضاحت دیتا ہے۔</li>
+      <li>سنگولیریٹی سے پاک ہے۔</li>
+      <li>حقیقی دنیا کی مثالوں سے تشبیہ دیتا ہے۔</li>
+    </ul>
+
+    <h2>١٠. نتیجہ</h2>
     <p>
       CPC نظریہ کائنات کی ساخت اور حرکت کی وضاحت کے لیے ایک دباؤ پر مبنی ماڈل پیش کرتا ہے، جو صرف کششِ ثقل پر مبنی ماڈلز کی کمزوریوں سے پاک ہے۔
     </p>
 
-    <h2>٦. حوالہ جات</h2>
-    <ul>
+    <h2>١١. حوالہ جات</h2>
+    <ol>
       <li>Misner, C. W., Thorne, K. S., & Wheeler, J. A. (1973). Gravitation. W. H. Freeman and Company.</li>
       <li>Padmanabhan, T. (1993). Structure Formation in the Universe. Cambridge University Press.</li>
       <li>Peebles, P. J. E. (1993). Principles of Physical Cosmology. Princeton University Press.</li>
@@ -139,13 +150,16 @@
       <li>Verlinde, E. (2017). Emergent Gravity and the Dark Universe. SciPost Physics, 2(3), 016.</li>
       <li>Zee, A. (2010). Quantum Field Theory in a Nutshell. Princeton University Press.</li>
       <li>Weinberg, S. (1972). Gravitation and Cosmology. Wiley.</li>
-    </ul>
-
-    <p style="text-align:center; margin-top:40px; font-weight:bold;">© 2025 عثمان مدنی — جملہ حقوق محفوظ ہیں</p>
-  </div>
+    </ol>
+  </main>
 
   <footer>
-    <p>کائناتی دباؤ اور گھیراؤ: ایک نظریہ جو کشش ثقل سے آگے دیکھتا ہے</p>
+    <p>© 2025 عثمان مدنی — جملہ حقوق محفوظ ہیں</p>
   </footer>
 </body>
+  <h2>٣. تصاویر</h2>
+    <img src="images/internal-pressure.png" alt="الضغط الداخلي" />
+    <img src="images/cpc-layers.png" alt="طبقات الاحتواء" />
+    <img src="images/cpc-diagrams.png" alt="رسومات الضغط" />
+    
 </html>
