--- a/urdu.html
+++ b/urdu.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Noto Naskh Arabic', serif;
+      font-family: 'Noto Nastaliq Urdu', serif;
       background: linear-gradient(to top left, #f2f9ff, #ffffff);
       color: #042f2e;
       margin: 0;
