--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Cosmic Pressure and Containment Theory</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Roboto', sans-serif;
       background: linear-gradient(to right, #f0f4f8, #e0f7fa);
       margin: 0;
       padding: 0;
@@ -156,19 +156,20 @@
       <li>Zee – <em>Quantum Field Theory in a Nutshell</em> (2010)</li>
       <li>Weinberg – <em>Gravitation and Cosmology</em> (1972)</li>
     </ol>
+    <h2>12. Illustrations</h2>
+    <img src="images/internal-pressure.png" alt="Internal Cosmic Pressure" />
+    <img src="images/cpc-layers.png" alt="Containment Layers" />
+    <img src="images/cpc-diagrams.png" alt="Diagrams of CPC" />
+    <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="Additional Image 1" />
+    <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="Additional Image 2" />
+
+    <p style="margin-top:40px; font-weight:600; text-align:center;">
   </main>
 
   <footer>
     <p>© 2025 Usman Madni — All rights reserved</p>
   </footer>
 </body>
-<h2>١٢. تصویریں</h2>
-    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
-    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
-    <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
-    <img src="images/577580f6-9d83-429a-a389-5dac7e2851b0.png" alt="تصویر 1" />
-    <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="تصویر 2" />
 
-    <p style="text-align:center; margin-top:40px;"><strong>© 2025  </strong></p>
 
 </html>
